re-add minus dotfiles

--- a/ENVI.ipynb
+++ b/ENVI.ipynb
@@ -20,8 +20,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "6b2e6991-3324-441a-9813-ddb9a74eb79d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "! cat gitignore > .gitignore"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bf1367f3-bbfc-49ca-ba79-c04f9415a01b",
    "metadata": {},
    "outputs": [],
    "source": []
